// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Home component RenderDataTable component should match snapshot 1`] = `
<DocumentFragment>
  <div
    class="flex flex-col"
  >
    <input
      class="bg-gray-100 text-sm p-2.5 w-80"
      placeholder="Search by name"
      type="text"
    />
    <div
      class="flex mb-2 mt-2"
    >
      <select
        class="bg-gray-100 text-gray-900 text-sm p-2.5 mr-2 w-44"
        id="sorting"
      >
        <option
          value="id"
        >
          Sort by ID
        </option>
        <option
          value="firstName"
        >
          Sort by First Name
        </option>
        <option
          value="lastName"
        >
          Sort by Last Name
        </option>
        <option
          value="age"
        >
          Sort by Age
        </option>
      </select>
      <select
        class="bg-gray-100 text-gray-900 text-sm p-2.5 w-40"
        id="filterBy_gender"
      >
        <option
          value=""
        >
          Filter by gender
        </option>
        <option
          value="male"
        >
          Male
        </option>
        <option
          value="female"
        >
          Female
        </option>
      </select>
    </div>
  </div>
  <div
    class="overflow-x-auto"
  >
    <table
      class="whitespace-normal w-full"
    >
      <thead
        class="mb-2"
      >
        <tr>
          <th
            class="pr-2 text-left pb-2"
          >
            ID
          </th>
          <th
            class="pr-2 text-left pb-2"
          >
            First Name
          </th>
          <th
            class="pr-2 text-left pb-2"
          >
            Last Name
          </th>
          <th
            class="pr-2 text-left pb-2"
          >
            Age
          </th>
          <th
            class="pr-2 text-left pb-2"
          >
            Gender
          </th>
          <th
            class="pr-2 text-left pb-2"
          >
            Video Status
          </th>
          <th
            class="pr-2 text-left pb-2"
          >
            Predicition Status
          </th>
        </tr>
      </thead>
      <tbody>
        <tr
          class="hover:bg-indigo-100 px-5 h-10 cursor-pointer even:bg-gray-100 capitalize"
        >
          <td
            class="pr-5"
          >
            1
          </td>
          <td
            class="pr-5"
          >
            John
          </td>
          <td
            class="pr-5"
          >
            Doe
          </td>
          <td
            class="pr-5"
          >
            35
          </td>
          <td
            class="pr-5"
          >
            male
          </td>
          <td
            class="pr-5"
          >
            completed
          </td>
          <td
            class="pr-5"
          >
            in-progress
          </td>
        </tr>
        <tr
          class="hover:bg-indigo-100 px-5 h-10 cursor-pointer even:bg-gray-100 capitalize"
        >
          <td
            class="pr-5"
          >
            2
          </td>
          <td
            class="pr-5"
          >
            Jane
          </td>
          <td
            class="pr-5"
          >
            Doe
          </td>
          <td
            class="pr-5"
          >
            28
          </td>
          <td
            class="pr-5"
          >
            female
          </td>
          <td
            class="pr-5"
          >
            completed
          </td>
          <td
            class="pr-5"
          >
            completed
          </td>
        </tr>
        <tr
          class="hover:bg-indigo-100 px-5 h-10 cursor-pointer even:bg-gray-100 capitalize"
        >
          <td
            class="pr-5"
          >
            3
          </td>
          <td
            class="pr-5"
          >
            Bob
          </td>
          <td
            class="pr-5"
          >
            Smith
          </td>
          <td
            class="pr-5"
          >
            50
          </td>
          <td
            class="pr-5"
          >
            male
          </td>
          <td
            class="pr-5"
          >
            in-progress
          </td>
          <td
            class="pr-5"
          >
            not-started
          </td>
        </tr>
        <tr
          class="hover:bg-indigo-100 px-5 h-10 cursor-pointer even:bg-gray-100 capitalize"
        >
          <td
            class="pr-5"
          >
            4
          </td>
          <td
            class="pr-5"
          >
            Alice
          </td>
          <td
            class="pr-5"
          >
            Johnson
          </td>
          <td
            class="pr-5"
          >
            40
          </td>
          <td
            class="pr-5"
          >
            female
          </td>
          <td
            class="pr-5"
          >
            not-started
          </td>
          <td
            class="pr-5"
          >
            not-started
          </td>
        </tr>
        <tr
          class="hover:bg-indigo-100 px-5 h-10 cursor-pointer even:bg-gray-100 capitalize"
        >
          <td
            class="pr-5"
          >
            5
          </td>
          <td
            class="pr-5"
          >
            Charlie
          </td>
          <td
            class="pr-5"
          >
            Brown
          </td>
          <td
            class="pr-5"
          >
            45
          </td>
          <td
            class="pr-5"
          >
            male
          </td>
          <td
            class="pr-5"
          >
            completed
          </td>
          <td
            class="pr-5"
          >
            completed
          </td>
        </tr>
        <tr
          class="hover:bg-indigo-100 px-5 h-10 cursor-pointer even:bg-gray-100 capitalize"
        >
          <td
            class="pr-5"
          >
            6
          </td>
          <td
            class="pr-5"
          >
            Lucy
          </td>
          <td
            class="pr-5"
          >
            Van Pelt
          </td>
          <td
            class="pr-5"
          >
            30
          </td>
          <td
            class="pr-5"
          >
            female
          </td>
          <td
            class="pr-5"
          >
            completed
          </td>
          <td
            class="pr-5"
          >
            in-progress
          </td>
        </tr>
        <tr
          class="hover:bg-indigo-100 px-5 h-10 cursor-pointer even:bg-gray-100 capitalize"
        >
          <td
            class="pr-5"
          >
            7
          </td>
          <td
            class="pr-5"
          >
            Linus
          </td>
          <td
            class="pr-5"
          >
            Van Pelt
          </td>
          <td
            class="pr-5"
          >
            33
          </td>
          <td
            class="pr-5"
          >
            male
          </td>
          <td
            class="pr-5"
          >
            in-progress
          </td>
          <td
            class="pr-5"
          >
            completed
          </td>
        </tr>
        <tr
          class="hover:bg-indigo-100 px-5 h-10 cursor-pointer even:bg-gray-100 capitalize"
        >
          <td
            class="pr-5"
          >
            8
          </td>
          <td
            class="pr-5"
          >
            Sally
          </td>
          <td
            class="pr-5"
          >
            Brown
          </td>
          <td
            class="pr-5"
          >
            25
          </td>
          <td
            class="pr-5"
          >
            female
          </td>
          <td
            class="pr-5"
          >
            not-started
          </td>
          <td
            class="pr-5"
          >
            not-started
          </td>
        </tr>
        <tr
          class="hover:bg-indigo-100 px-5 h-10 cursor-pointer even:bg-gray-100 capitalize"
        >
          <td
            class="pr-5"
          >
            9
          </td>
          <td
            class="pr-5"
          >
            Schroeder
          </td>
          <td
            class="pr-5"
          >
            Unknown
          </td>
          <td
            class="pr-5"
          >
            32
          </td>
          <td
            class="pr-5"
          >
            male
          </td>
          <td
            class="pr-5"
          >
            completed
          </td>
          <td
            class="pr-5"
          >
            completed
          </td>
        </tr>
        <tr
          class="hover:bg-indigo-100 px-5 h-10 cursor-pointer even:bg-gray-100 capitalize"
        >
          <td
            class="pr-5"
          >
            10
          </td>
          <td
            class="pr-5"
          >
            Peppermint
          </td>
          <td
            class="pr-5"
          >
            Patty
          </td>
          <td
            class="pr-5"
          >
            29
          </td>
          <td
            class="pr-5"
          >
            female
          </td>
          <td
            class="pr-5"
          >
            in-progress
          </td>
          <td
            class="pr-5"
          >
            in-progress
          </td>
        </tr>
        <tr
          class="hover:bg-indigo-100 px-5 h-10 cursor-pointer even:bg-gray-100 capitalize"
        >
          <td
            class="pr-5"
          >
            11
          </td>
          <td
            class="pr-5"
          >
            Marcie
          </td>
          <td
            class="pr-5"
          >
            Unknown
          </td>
          <td
            class="pr-5"
          >
            31
          </td>
          <td
            class="pr-5"
          >
            female
          </td>
          <td
            class="pr-5"
          >
            completed
          </td>
          <td
            class="pr-5"
          >
            completed
          </td>
        </tr>
        <tr
          class="hover:bg-indigo-100 px-5 h-10 cursor-pointer even:bg-gray-100 capitalize"
        >
          <td
            class="pr-5"
          >
            12
          </td>
          <td
            class="pr-5"
          >
            Rerun
          </td>
          <td
            class="pr-5"
          >
            Van Pelt
          </td>
          <td
            class="pr-5"
          >
            27
          </td>
          <td
            class="pr-5"
          >
            male
          </td>
          <td
            class="pr-5"
          >
            not-started
          </td>
          <td
            class="pr-5"
          >
            not-started
          </td>
        </tr>
        <tr
          class="hover:bg-indigo-100 px-5 h-10 cursor-pointer even:bg-gray-100 capitalize"
        >
          <td
            class="pr-5"
          >
            13
          </td>
          <td
            class="pr-5"
          >
            Pigpen
          </td>
          <td
            class="pr-5"
          >
            Unknown
          </td>
          <td
            class="pr-5"
          >
            33
          </td>
          <td
            class="pr-5"
          >
            male
          </td>
          <td
            class="pr-5"
          >
            completed
          </td>
          <td
            class="pr-5"
          >
            in-progress
          </td>
        </tr>
        <tr
          class="hover:bg-indigo-100 px-5 h-10 cursor-pointer even:bg-gray-100 capitalize"
        >
          <td
            class="pr-5"
          >
            14
          </td>
          <td
            class="pr-5"
          >
            Frieda
          </td>
          <td
            class="pr-5"
          >
            Unknown
          </td>
          <td
            class="pr-5"
          >
            36
          </td>
          <td
            class="pr-5"
          >
            female
          </td>
          <td
            class="pr-5"
          >
            in-progress
          </td>
          <td
            class="pr-5"
          >
            completed
          </td>
        </tr>
        <tr
          class="hover:bg-indigo-100 px-5 h-10 cursor-pointer even:bg-gray-100 capitalize"
        >
          <td
            class="pr-5"
          >
            15
          </td>
          <td
            class="pr-5"
          >
            Violet
          </td>
          <td
            class="pr-5"
          >
            Gray
          </td>
          <td
            class="pr-5"
          >
            34
          </td>
          <td
            class="pr-5"
          >
            female
          </td>
          <td
            class="pr-5"
          >
            not-started
          </td>
          <td
            class="pr-5"
          >
            not-started
          </td>
        </tr>
      </tbody>
    </table>
  </div>
  <p
    class="font-bold text-sm mt-4"
  >
    Page: 1/3
  </p>
  <div
    class="flex justify-start my-1"
  >
    <button
      class="h-8 px-4 text-white bg-indigo-700 hover:bg-indigo-800"
    >
      Next
    </button>
  </div>
</DocumentFragment>
`;

exports[`Home component should match snapshot 1`] = `
<DocumentFragment>
  <div
    class="container md:px-10 px-5 pb-5"
  >
    <div
      class="max-w-2xl mb-5"
    >
      <h3
        class="text-lg font-bold mb-1"
      >
        Current Patients
      </h3>
      <p>
        You can view the list of patients registered to you below. 
        <strong>
          Clicking
        </strong>
         on any patient will allow you to see more information as well as 3D modelling information.
      </p>
    </div>
    <div>
      <div
        class="flex flex-col"
      >
        <input
          class="bg-gray-100 text-sm p-2.5 w-80"
          placeholder="Search by name"
          type="text"
        />
        <div
          class="flex mb-2 mt-2"
        >
          <select
            class="bg-gray-100 text-gray-900 text-sm p-2.5 mr-2 w-44"
            id="sorting"
          >
            <option
              value="id"
            >
              Sort by ID
            </option>
            <option
              value="firstName"
            >
              Sort by First Name
            </option>
            <option
              value="lastName"
            >
              Sort by Last Name
            </option>
            <option
              value="age"
            >
              Sort by Age
            </option>
          </select>
          <select
            class="bg-gray-100 text-gray-900 text-sm p-2.5 w-40"
            id="filterBy_gender"
          >
            <option
              value=""
            >
              Filter by gender
            </option>
            <option
              value="male"
            >
              Male
            </option>
            <option
              value="female"
            >
              Female
            </option>
          </select>
        </div>
      </div>
      <div
        class="overflow-x-auto"
      >
        <table
          class="whitespace-normal w-full"
        >
          <thead
            class="mb-2"
          >
            <tr>
              <th
                class="pr-2 text-left pb-2"
              >
                ID
              </th>
              <th
                class="pr-2 text-left pb-2"
              >
                First Name
              </th>
              <th
                class="pr-2 text-left pb-2"
              >
                Last Name
              </th>
              <th
                class="pr-2 text-left pb-2"
              >
                Age
              </th>
              <th
                class="pr-2 text-left pb-2"
              >
                Gender
              </th>
              <th
                class="pr-2 text-left pb-2"
              >
                Video Status
              </th>
              <th
                class="pr-2 text-left pb-2"
              >
                Predicition Status
              </th>
            </tr>
          </thead>
          <tbody />
        </table>
      </div>
      <p
        class="font-bold text-sm mt-4"
      >
        Page: 1/0
      </p>
      <div
        class="flex justify-start my-1"
      />
    </div>
  </div>
</DocumentFragment>
`;
